Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,18 +2,10 @@ trigger:
 - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  name: 'Default' # Replace 'Default' with the name of your self-hosted agent pool
 
 steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '3.x'
-    addToPath: true
+- script: echo "Hello, World!"
+  displayName: 'Run Hello World Script'
 
-- script: |
-    python -m venv venv
-    source venv/bin/activate
-    pip install -r requirements.txt
-    pytest
-  displayName: 'Run Tests'
 
